@@ -1,3 +1,8 @@
+2014-12-16 Riccardo Mottola <rm@gnu.org>
+
+	* Framework/PCMakefileFactory.m
+	Generate sections only if there are classes.
+
 2014-12-15 Riccardo Mottola <rm@gnu.org>
 
 	* Framework/PCMakefileFactory.m
